# beaver-builder

./: .gitignore  CONTEXT.md  design-doc.md  gemini-web-page.html
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/application/: handlers.rs  mod.rs  orchestrator.rs
backend/src/domain/: agent.rs  mod.rs  pipeline.rs  task.rs  tool.rs  workspace.rs
backend/src/infrastructure/: fs_ops.rs  git_ops.rs  llm_client.rs  mod.rs  ws_server.rs
backend/src/llm/: factory.rs  mod.rs  openai.rs  provider.rs
backend/src/protocol/: events.rs  messages.rs  mod.rs  ops.rs
backend/tests/: orchestrator_tests.rs  protocol_tests.rs  ws_integration.rs
deepresearch/: agent-loop-and-turn-mechanics.md  async-patterns-and-concurrency.md  codex-deep-research.md  configuration-and-extensibility.md  context-engineering.md  error-recovery-and-self-correction.md  memory-system.md  message-management-and-interruptions.md  model-output-parsing-and-streaming.md  observability-and-debugging.md  sandbox-and-security.md  session-state-and-persistence.md  subagent-orchestration-and-communication.md  system-prompts-anatomy.md  testing-non-deterministic-ai.md  tool-design-and-execution.md
docs/superpowers/plans/: 2026-04-05-beaver-builder-v2.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
reviews/: architecture-review.md  code-quality-review.md  review.md
tests/: e2e-test-report.md  test-plan.md  test-report.md
tests/fixtures/: events.json  ops.json  tasks.json  workspaces.json
(+23 files in other folders)
